chore: Update langgraph dependencies and imports

--- a/langgraph_code_assistant_mistral.ipynb
+++ b/langgraph_code_assistant_mistral.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pip install -U langchain_community langchain-openai langchain langgraph"
+    "# pip install -U langchain_community langchain-openai langchain-experimental langchain langgraph"
    ]
   },
   {
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "982e4609-86e4-4934-828f-e03d89c20393",
    "metadata": {},
    "outputs": [],
@@ -43,66 +43,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "id": "a188c8ca-c053-4e6d-b7af-38a3b6b371c7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Select LLM\n",
-    "from langchain_openai import ChatOpenAI\n",
-    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain_experimental.llms.ollama_functions import OllamaFunctions\n",
+    "from langchain_core.prompts import PromptTemplate\n",
     "from langchain_core.pydantic_v1 import BaseModel, Field\n",
     "\n",
-    "llm = ChatOpenAI(model=\"llama3\",     \n",
-    "                base_url='http://localhost:11434/v1',\n",
-    "                api_key='ollama')"
+    "llm = OllamaFunctions(model=\"llama3\", format=\"json\", temperature=0)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "0ead258f",
+   "cell_type": "markdown",
+   "id": "bc4191c0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "AIMessage(content='Hello back! It\\'s not every day I get to chat with a classic \"hello world\" greeting. How are you doing today?', response_metadata={'token_usage': {'completion_tokens': 28, 'prompt_tokens': 7, 'total_tokens': 35}, 'model_name': 'llama3', 'system_fingerprint': 'fp_ollama', 'finish_reason': 'stop', 'logprobs': None}, id='run-56e9722f-e0fd-447b-9d2d-c6f8ef112d3f-0', usage_metadata={'input_tokens': 7, 'output_tokens': 28, 'total_tokens': 35})"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "llm.invoke(\"hello world\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "id": "5cfb3300",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Prompt \n",
-    "code_gen_prompt_claude = ChatPromptTemplate.from_messages(\n",
-    "    [\n",
-    "        (\n",
-    "            \"system\", \n",
+    "code_gen_prompt_claude = PromptTemplate.from_template((\n",
     "            \"\"\"You are a coding assistant. Ensure any code you provide can be executed with all required imports and variables \\n\n",
     "            defined. Structure your answer: 1) a prefix describing the code solution, 2) the imports, 3) the functioning code block.\n",
-    "            \\n Here is the user question:\"\"\",\n",
-    "        ),\n",
-    "        (\"placeholder\", \"{messages}\"),\n",
-    "    ]\n",
-    ")"
+    "            \\n Human: {question}\n",
+    "            AI: \"\"\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "id": "3c3efe3b",
    "metadata": {},
    "outputs": [],
@@ -117,58 +94,29 @@
     "    description = \"Schema for code solutions to questions about LCEL.\"\n",
     "\n",
     "# LLM\n",
-    "code_gen_chain = llm.with_structured_output(code, include_raw=False)"
+    "structured_llm = llm.with_structured_output(code)\n",
+    "code_gen_chain = code_gen_prompt_claude | structured_llm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "id": "9fc0290d-5a04-4514-8664-91f9dbf2da7b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "question = \"Write a function for fibonacci.\"\n",
-    "messages = [(\"user\", question)]"
+    "question = \"Write a function for fibonacci.\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "f573dae2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('user', 'Write a function for fibonacci.')]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "messages"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 49,
    "id": "973281bd-e74b-4386-98c6-210af5e31982",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test\n",
-    "print(code_gen_chain.invoke(messages))"
+    "print(code_gen_chain.invoke(question))"
    ]
   },
   {
